# EXPcrowExperiment

./: .gitignore  .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  TheToughtExperimental.sql  core.cpp  core.h  logjan20.txt  main.cpp  tags  thente.sql  thetoughtexperimentwithdata.sql
models/: .StoreNames.cpp.swo  .WordsCompare.cpp.swp  .gTXTJValues.cpp.swp  PoolDBConnection.cpp  StoreNames.cpp  WordsCompare.cpp  gTXTJValues.cpp
