cmake_minimum_required(VERSION 3.15)
project(CrowSample)
set(INCLUDE_PATHS /usr/include)

add_library(core core.cpp)
target_include_directories(core PUBLIC ${INCLUDE_PATHS})
target_link_directories(core PUBLIC /usr/lib)
target_link_libraries(core PUBLIC pqxx)
message("EEEEEEEEEEEEEEEEE")

file(GLOB CONFIGS "../ConfigsForCrowBackend/*.json")
foreach(CONF ${CONFIGS})
	message("Messüge: ----")
	get_filename_component(NAME ${CONF} NAME_WE)
    add_executable(${NAME} main.cpp)
    target_link_libraries(${NAME} PRIVATE core)
    target_compile_definitions(${NAME} PRIVATE CONFIG_FILE="${CONF}")
endforeach()

# add_executable(crowTestExample test.cpp)
# target_include_directories(CrowTestExample PUBLIC ${INCLUDE_PATHS})
# target_link_libraries(crowTestExample PRIVATE pqxx)
